--- a/menu.html
+++ b/menu.html
@@ -47,6 +47,9 @@
                 <div class="size4 size"></div>
             </div>
         </div>
+        <div class="tool" id="sticky">
+            <img src="./NewIcons/StickyNote.svg" alt="" class="tool-img">
+        </div>
         <div class="color-container">
             <div class="color red"></div>
             <div class="color blue"></div>
@@ -58,6 +61,7 @@
     <script src="./setup.js"> </script>
  <script src="./draw.js"></script>
  <script src="./toolmanupulation.js"></script>
+ <script src="./sticky.js"></script>
 
 
 </body>
